right-align date in news item header

--- a/views/index.html
+++ b/views/index.html
@@ -47,9 +47,9 @@
       <h1 class="text-center">News</h1>
       <div class="panel panel-default news-item">
         <div class="panel-heading">
-          <h4 class="row">
-            <div class="created text-muted col-sm-2">date</div>
-            <div class="title col-sm-10">title</div>
+          <h4>
+            <div class="created text-muted pull-right">date</div>
+            <div class="title">title</div>
           </h4>
         </div>
         <div class="panel-body content">
