--- a/views/admin/news/create_update.html
+++ b/views/admin/news/create_update.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <a class="btn btn-primary" href="/admin/news">News List</a>
   <form class="form-horizontal" method="post" name="update_create_news">
     <input type="hidden" name="messages_id">
 
@@ -6,6 +7,13 @@
       <label for="inputTitle" class="col-sm-2 control-label">Title</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="inputTitle" name="title" placeholder="Title" required>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="inputUri" class="col-sm-2 control-label">Optional Uri</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="inputUri" name="uri" placeholder="Uri" required>
       </div>
     </div>
 
