--- a/views/index.html
+++ b/views/index.html
@@ -112,7 +112,7 @@
     </div>
 
     <div class="location">
-      <div class="location-title">Conference Venue - Hotel Schani Wien 21/22 Oct</div>
+      <div class="location-title">Conference Venue - <a href="http://www.hotelschani.com/1/home/" target="_blank">Hotel Schani Wien</a> 21/22 Oct</div>
       <div>
         <i class="fa fa-location-arrow"></i> <span class="location-address">Karl-Popper-Straße 22, 1100 Wien, Austria</span>
       </div>
