add news routes and templates

--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,12 @@
         <div class="panel-heading">
           <h4>
             <div class="created text-muted pull-right">date</div>
-            <div class="title">title</div>
+            <div class="has_uri">
+              <a class="title" href="/news/">title</a>
+            </div>
+            <div class="no_uri">
+              <div class="title">title</div>
+            </div>
           </h4>
         </div>
         <div class="panel-body content">
