add 'all news' link to news view when showing a single item

--- a/views/news.html
+++ b/views/news.html
@@ -15,4 +15,5 @@
       <div class="panel-body content">
       </div>
     </div>
+    <div class="all-news"><a href="/news">All News</a></div>
 </div>
