Adjust venue addresses on front page.

--- a/views/index.html
+++ b/views/index.html
@@ -111,7 +111,7 @@
     <div class="location">
       <div class="location-title">Training Venue - Amerikahaus - 19/20 Oct</div>
       <div>
-        <i class="fa fa-location-arrow"></i> <span class="location-address">2 Friedrich-Schmidt-Platz, 1010 Wien, Austria</span>
+        <i class="fa fa-location-arrow"></i> <span class="location-address">Friedrich-Schmidt-Platz 2, 1010 Vienna, Austria</span>
       </div>
       <div id="wgmpmap"></div>
     </div>
@@ -119,7 +119,7 @@
     <div class="location">
       <div class="location-title">Conference Venue - <a href="http://www.hotelschani.com/1/home/" target="_blank">Hotel Schani Wien</a> 21/22 Oct</div>
       <div>
-        <i class="fa fa-location-arrow"></i> <span class="location-address">Karl-Popper-Straße 22, 1100 Wien, Austria</span>
+        <i class="fa fa-location-arrow"></i> <span class="location-address">Karl-Popper-Straße 22, 1100 Vienna, Austria</span>
       </div>
       <div id="confmap"></div>
     </div>
