--- a/views/admin/news/create_update.html
+++ b/views/admin/news/create_update.html
@@ -1,7 +1,12 @@
 <div class="container">
-  <a class="btn btn-primary" href="/admin/news">News List</a>
   <form class="form-horizontal" method="post" name="update_create_news">
     <input type="hidden" name="messages_id">
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <a class="btn btn-default" href="/admin/news">News List</a>
+      </div>
+    </div>
 
     <div class="form-group">
       <label for="inputTitle" class="col-sm-2 control-label">Title</label>
@@ -32,7 +37,7 @@
     <div class="form-group">
       <label for="inputContent" class="col-sm-2 control-label">Content</label>
       <div class="col-sm-10">
-        <textarea rows="5" class="form-control" id="inputContent" name="content" placeholder="Content" required></textarea>
+        <textarea rows="5" class="content form-control" id="inputContent" name="content" placeholder="Content" required></textarea>
         <span class="help-block">Content should be written in Markdown</span>
       </div>
     </div>
