Display author name on news entries.

--- a/views/news.html
+++ b/views/news.html
@@ -10,6 +10,7 @@
           <div class="no_uri">
             <div class="title">title</div>
           </div>
+          <div class="author">Anonymous</div>
         </h4>
       </div>
       <div class="panel-body content">
