restyle news author and include news.html in index via hook

--- a/views/index.html
+++ b/views/index.html
@@ -43,24 +43,8 @@
     </div>
   </div>
 
-  <div class="container news-container">
-      <h1 class="text-center">News</h1>
-      <div class="panel panel-default news-item">
-        <div class="panel-heading">
-          <h4>
-            <div class="created text-muted pull-right">date</div>
-            <div class="has_uri">
-              <a class="title" href="/news/">title</a>
-            </div>
-            <div class="no_uri">
-              <div class="title">title</div>
-            </div>
-            <div class="author">Anonymous</div>
-          </h4>
-        </div>
-        <div class="panel-body content">
-        </div>
-      </div>
+  <div class="has_news">
+    <!-- new goes here if there is any - news.html -->
   </div>
 
   <div class="container register-container">
