--- a/views/news.html
+++ b/views/news.html
@@ -10,8 +10,8 @@
           <div class="no_uri">
             <div class="title">title</div>
           </div>
-          <div class="author">Anonymous</div>
         </h4>
+        <p class="author text-muted">Anonymous</p>
       </div>
       <div class="panel-body content">
       </div>
