--- a/public/css/site.css
+++ b/public/css/site.css
@@ -28,6 +28,9 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.3;
   margin-bottom: 18px;
 }
+.news-container h4 {
+  margin-bottom: 2px;
+}
 /* nav */
 #navbar a {
   font-family: "Raleway";
