revert textarea news admin hacks thanks to TF fix

--- a/views/admin/news/create_update.html
+++ b/views/admin/news/create_update.html
@@ -37,7 +37,7 @@
     <div class="form-group">
       <label for="inputContent" class="col-sm-2 control-label">Content</label>
       <div class="col-sm-10">
-        <textarea rows="5" class="content form-control" id="inputContent" name="content" placeholder="Content" required></textarea>
+        <textarea rows="5" class="form-control" id="inputContent" name="content" placeholder="Content" required></textarea>
         <span class="help-block">Content should be written in Markdown</span>
       </div>
     </div>
