--- a/views/profile/edit.html
+++ b/views/profile/edit.html
@@ -1,63 +1,88 @@
 <div class="container">
-  <div class="well">
-  <h2 class="stunning-text-title">Ready To Submit Your Talk?</h2>
-  <div>
-    <p>All talk submissions will be peer reviewed and evaluated based on originality, technical and/or research content/depth, correctness, relevance to conference, contributions, and readability. English is the official language of the conference. We welcome paper submissions.</p>
-    <p>It's enough to submit a short abstract, duration and title before conference.</p>
-    <p>Abstract should be max 200 words and duration can be 20 or 40 minutes.</p>
-  </div>
-  </div>
-</div>
-
-<div class="container login-required">
-  <h2>Login required</h2>
-  <p>You must be logged in to submit a talk.</p>
-  <div class="login-fragment"></div>
-</div>
-
-<div class="container logged-in">
   <div class="panel panel-default">
+    <div class="panel-heading">
+      Update Your Profile
+    </div>
     <div class="panel-body">
-      <form class="form-horizontal" method="post">
+      <form class="form-horizontal" method="post" name="edit_profile">
 
-        <div class="form-group talk_title_input">
-          <label for="inputTitle" class="col-sm-2 control-label">Title</label>
+        <div class="form-group first_name_input">
+          <label for="inputFirstName" class="col-sm-2 control-label">First Name</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control talk_title" id="inputTitle" name="talk_title" required placeholder="Talk title">
-            <div class="help-block talk_title_error"></div>
+            <input type="text" class="form-control" id="inputFirstName" name="first_name" required placeholder="First Name">
+            <div class="help-block first_name_error"></div>
           </div>
         </div>
 
-        <div class="form-group abstract_input">
-          <label for="inputAbstract" class="col-sm-2 control-label">Abstract</label>
+        <div class="form-group last_name_input">
+          <label for="inputLastName" class="col-sm-2 control-label">Last Name</label>
           <div class="col-sm-10">
-            <textarea rows="4" class="form-control abstract" id="inputAbstract" name="abstract" required placeholder="Talk abstract (max 200 words)"></textarea>
-            <div class="help-block abstract_error"></div>
+            <input type="text" class="form-control" id="inputLastName" name="last_name" placeholder="Last Name">
+            <div class="help-block last_name_error"></div>
           </div>
         </div>
 
-        <div class="form-group tags_input">
-          <label for="inputTags" class="col-sm-2 control-label">Tags</label>
+        <div class="form-group nickname_input">
+          <label for="inputNickname" class="col-sm-2 control-label">Nickname</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control tags" id="inputTags" name="tags" required placeholder="Tags, e.g.: Dancer DBIx::Class git">
-            <div class="help-block tags_error"></div>
+            <input type="text" class="form-control" id="inputNickname" name="nickname" placeholder="Nickname">
+            <div class="help-block nickname_error"></div>
           </div>
         </div>
 
-        <div class="form-group duration_input">
-          <label for="inputDuration" class="col-sm-2 control-label">Duration</label>
+        <div class="form-group company_input">
+          <label for="inputCompany" class="col-sm-2 control-label">Company</label>
           <div class="col-sm-10">
-            <select class="form-control duration" id="inputDuration" name="duration" required placeholder="Talk duration">
-              <option>10 mins</option>
-              <option>20 mins</option>
-            </select>
-            <div class="help-block duration_error"></div>
+            <input type="text" class="form-control" id="inputCompany" name="company" placeholder="Company">
+            <div class="help-block company_error"></div>
+          </div>
+        </div>
+
+        <div class="form-group city_input">
+          <label for="inputCity" class="col-sm-2 control-label">City</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputCity" name="city" placeholder="City">
+            <div class="help-block city_error"></div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="inputCountry" class="col-sm-2 control-label">Country</label>
+          <div class="col-sm-10">
+            <select name="country" class="country form-control" id="inputCountry" name="country_iso_code">
+          </div>
+        </div>
+
+        <div class="form-group monger_groups_input">
+          <label for="inputMongerGroups" class="col-sm-2 control-label">Monger Groups</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputMongerGroups" name="monger_groups" placeholder="Monger Groups">
+            <div class="help-block monger_groups_error"></div>
+            <div class="help-block">City.pm, drinkers.pm, etc</div>
+          </div>
+        </div>
+
+        <div class="form-group pause_id_input">
+          <label for="inputPauseId" class="col-sm-2 control-label">PAUSE id</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputPauseId" name="pause_id" placeholder="PauseId">
+            <div class="help-block pause_id_error"></div>
+          </div>
+        </div>
+
+        <div class="form-group bio_input">
+          <label for="inputBio" class="col-sm-2 control-label">Bio</label>
+          <div class="col-sm-10">
+            <textarea rows="4" class="form-control" id="inputBio" name="bio" required placeholder="Talk abstract (max 200 words)"></textarea>
+            <div class="help-block bio_error"></div>
+            <div class="help-block">In English. Please fill at least this one.</div>
           </div>
         </div>
 
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a class="btn btn-default" href="/profile">Cancel</a>
           </div>
         </div>
 
