massive talk submission/edit overhaul

--- a/views/cfp.html
+++ b/views/cfp.html
@@ -33,62 +33,8 @@
     Dancer related topics as well.
     </p>
   </div>    
+  <div class="text-center">
+    <a class="btn btn-primary" href="/profile/talk/create">Submit a talk now!</a>
   </div>
-</div>
-
-<div class="container login-required">
-  <h2>Login required</h2>
-  <p>You must be logged in to submit a talk.</p>
-  <div class="login-fragment"></div>
-</div>
-
-<div class="container logged-in">
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <form class="form-horizontal" method="post">
-
-        <div class="form-group talk_title_input">
-          <label for="inputTitle" class="col-sm-2 control-label">Title</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control talk_title" id="inputTitle" name="talk_title" required placeholder="Talk title">
-            <div class="help-block talk_title_error"></div>
-          </div>
-        </div>
-
-        <div class="form-group abstract_input">
-          <label for="inputAbstract" class="col-sm-2 control-label">Abstract</label>
-          <div class="col-sm-10">
-            <textarea rows="4" class="form-control abstract" id="inputAbstract" name="abstract" required placeholder="Talk abstract (max 200 words)"></textarea>
-            <div class="help-block abstract_error"></div>
-          </div>
-        </div>
-
-        <div class="form-group tags_input">
-          <label for="inputTags" class="col-sm-2 control-label">Tags</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control tags" id="inputTags" name="tags" placeholder="Tags, e.g.: Dancer DBIx::Class git">
-            <div class="help-block tags_error"></div>
-          </div>
-        </div>
-
-        <div class="form-group duration_input">
-          <label for="inputDuration" class="col-sm-2 control-label">Duration</label>
-          <div class="col-sm-10">
-            <select class="form-control duration" id="inputDuration" name="duration" required placeholder="Talk duration">
-              <option>10 mins</option>
-              <option>20 mins</option>
-            </select>
-            <div class="help-block duration_error"></div>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </form>
+  </div>
 </div>
