--- a/views/email/talk_submitted.html
+++ b/views/email/talk_submitted.html
@@ -5,4 +5,7 @@
   <tr><td>Talk title</td><td class="title"></td></tr>
   <tr><td>Abstract</td><td class="abstract"></td></tr>
   <tr><td>Duration</td><td class="duration"></td></tr>
+  <tr><td>URL</td><td class="url"></td></tr>
+  <tr><td>Comments</td><td class="comments"></td></tr>
+  <tr><td>Confirmed</td><td class="confirmed"></td></tr>
 </table>
