--- a/views/profile.html
+++ b/views/profile.html
@@ -7,9 +7,9 @@
   </ul>
   <p>View/edit your talks <!--(accepted talks are shown in <b>bold</b> type)-->:</p>
   <ul class="talks">
-    <li class="talk"><a class="talk-link" href="/">Talk title</a></li>
+    <li class="talk"><a class="talk-link" href="/profile/talk/">Talk title</a> <span class="accepted">(Accepted)</span></li>
   </ul>
-  <p><a href="/talks/submit">Submit a talk</a></p>
+  <p><a href="/profile/talk/create">Submit a talk</a></p>
   <p><a href="/logout">Logout</a></p>
 </div>
 </div>
