Add note about accepting talks before the deadline.

--- a/views/cfp.html
+++ b/views/cfp.html
@@ -8,7 +8,8 @@
     <p>
     Each presentation will last either 20 or 40 minutes after which there will be time for questions.
     </p>
-    <p>The submission deadline is August 31th, midnight CET. Talks are reviewed and possibly accepted as we receive them.
+    <p>The submission deadline is August 31th, midnight CET. Please note that we will be starting to accept talks earlier than
+    the deadline and these will be given a priority on the schedule.
     </p>
   </div>
   <h2 class="stunning-text-title">Suggested Topics</h2>
