--- a/views/register_reset.html
+++ b/views/register_reset.html
@@ -2,9 +2,10 @@
   <div class="center-block">
     <h2 class="text-center action_name">Do something</h2>
     <div class="text text-center">Some text about what is going on.</div>
-    <form class="text-center form-inline form" method="post" action="/register">
-      <div class="form-group">
+    <form class="text-center form-inline form register-email" method="post" action="/register">
+      <div class="form-group username_input">
         <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
+        <div class="help-block username_error"></div>
         <input class="btn btn-primary submit" type="submit" value="Submit">
       </div>
     </form>
