small email_sent view improvements

--- a/views/email_sent.html
+++ b/views/email_sent.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <p>An email has been sent to <span class="username">user@example.com</span>
-  with details as to how you should proceed.</p>
-  <p>We look forward to seeing you at the Perl Dancer Conference.</p>
+  <div class="well">
+    <h4 class="title"></h4>
+    <p>An email has been sent to <span class="username">user@example.com</span>
+    with details as to how you should proceed.</p>
+    <p>We look forward to seeing you at the Perl Dancer Conference.</p>
+  </div>
 </div>
