update login views post /register validation works

--- a/views/fragments/login.html
+++ b/views/fragments/login.html
@@ -36,11 +36,12 @@
           New Users Register Here
         </div>
         <div class="panel-body">
+          <p>Please enter your email address and hit submit to begin the registration process.</p>
           <form class="form-horizontal" action="/register" method="post">
             <div class="form-group username_input">
               <label for="emailInput" class="col-sm-3 control-label">Email</label>
               <div class="col-sm-9">
-                <input type="email" class="form-control register" id="emailInput" placeholder="Email" name="register">
+                <input type="email" class="form-control register" id="emailInput" placeholder="Email" name="username">
                 <div class="help-block username_error"></div>
               </div>
             </div>
