--- a/views/fragments/login.html
+++ b/views/fragments/login.html
@@ -36,7 +36,7 @@
           New Users Register Here
         </div>
         <div class="panel-body">
-          <p>Please enter your email address and hit submit to begin the registration process.</p>
+          <p>Please enter your email address and hit submit to begin the conference registration process.</p>
           <form class="form-horizontal" action="/register" method="post">
             <div class="form-group username_input">
               <label for="emailInput" class="col-sm-3 control-label">Email</label>
