add sans-serif as fallback to Raleway font
Makes Jure's name look less weird

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -20,7 +20,7 @@ a:focus, a:hover {
   color: #0749bc;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway";
+  font-family: "Raleway", Sans-Serif;
   text-transform: uppercase;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* nav */
 #navbar a {
-  font-family: "Raleway";
+  font-family: "Raleway", Sans-Serif;
   font-size: 11px;
   font-weight: 800;
   letter-spacing: 1px;
