force equal height columns via jquery plugin closes #25

--- a/views/fragments/speakers.html
+++ b/views/fragments/speakers.html
@@ -1,5 +1,5 @@
-<div class="row speaker-row">
-  <div class="col-sm-3 col-xs-6 speaker">
+<div class="row speaker-row equal-height-container">
+  <div class="col-sm-3 col-xs-6 speaker equal-height-column">
     <a class="speaker-link" href="speakers/"><img class="photo img-responsive img-rounded" src="/img/people/"></a>
     <h4 class="speaker-title"><a class="speaker-link name" href="speakers/"></a></h4>
     <div class="center-block">
