--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -88,6 +88,7 @@
     <!--script src="//code.jquery.com/jquery-1.11.3.min.js"></script-->
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src='/js/jquery.equalheightcolumns.min.js'></script>
     <script src="/js/fileinput.min.js"></script>
     <script src="/js/jquery.Jcrop.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
