--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -15,6 +15,7 @@
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Raleway%3A100%2C200%2C300%2Cregular%2C500%2C600%2C700%2C800%2C900&#038;subset=latin&#038' type='text/css'>
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Montserrat%3Aregular%2C700&#038;subset=latin&#038' type='text/css'>
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Droid+Serif%3Aregular%2Citalic%2C700%2C700italic&#038;subset=latin&#038' type='text/css'>
+    <link rel="stylesheet" href="/css/leaflet.css" />
     <link rel='stylesheet' href='/css/google-map.css' type='text/css'>
     <link rel='stylesheet' href='/css/font-awesome.min.css' type='text/css'>
     <link rel='stylesheet' href='/css/fileinput.min.css' type='text/css'>
@@ -93,6 +94,7 @@
     <script src="/js/jquery.Jcrop.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src='/js/bootstrap-hover-dropdown.min.js'></script>
+    <script src='/js/leaflet.js'></script>
     <script src='/js/site.js'></script>
     <div class='extra-js'><script class='src' src=''></script></div>
   </body>
