--- a/views/index.html
+++ b/views/index.html
@@ -93,21 +93,21 @@
   <div class="container">
     <h1 class="text-center">Location</h1>
 
+    <div class="location pull-right">
+      <div class="location-title">Conference Venue - <a href="http://www.hotelschani.com/1/home/" target="_blank">Hotel Schani Wien</a> 21/22 Oct</div>
+      <div>
+        <i class="fa fa-location-arrow"></i> <span class="location-address">Karl-Popper-Straße 22, 1100 Vienna, Austria</span>
+      </div>
+    </div>
+
     <div class="location">
       <div class="location-title">Training Venue - Amerikahaus - 19/20 Oct</div>
       <div>
         <i class="fa fa-location-arrow"></i> <span class="location-address">Friedrich-Schmidt-Platz 2, 1010 Vienna, Austria</span>
       </div>
-      <div id="wgmpmap"></div>
     </div>
 
-    <div class="location">
-      <div class="location-title">Conference Venue - <a href="http://www.hotelschani.com/1/home/" target="_blank">Hotel Schani Wien</a> 21/22 Oct</div>
-      <div>
-        <i class="fa fa-location-arrow"></i> <span class="location-address">Karl-Popper-Straße 22, 1100 Vienna, Austria</span>
-      </div>
-      <div id="confmap"></div>
-    </div>
+    <div id="map" class="clearfix"></div>
 
   </div>
 
