Add PayPal payment and link on profile for tickets.

--- a/views/cart.html
+++ b/views/cart.html
@@ -1,5 +1,9 @@
 <div class="container">
   <h1>Your shopping cart</h1>
+  <div class="paypal-error"><p>
+  Payment with PayPal failed, please contact <a href="mailto:2015@perl.dance">
+  2015@perl.dance</a> for assistance.
+  </p></div>
   <div class="row">
     <div class="col-md-9">
       <div class="table-responsive cart-container">
