--- a/views/fragments/cart.html
+++ b/views/fragments/cart.html
@@ -1,3 +1,4 @@
+<form action="/paypal/setrequest" class="payment-form" method="POST">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -40,3 +41,8 @@
     </tr>
   </tbody>
 </table>
+    
+<div class="text-center">
+  <button class="btn btn-primary" href="/profile/talk/create" type="submit">Pay with PayPal</button>
+</div>
+</form>
