--- a/views/fragments/tickets.html
+++ b/views/fragments/tickets.html
@@ -9,7 +9,7 @@
       <form action="/cart" method="post">
         <input type="hidden" class="sku" name="sku">
         <!--button type="submit" class="btn btn-primary">Book Now</button-->
-        <a href="/register" class="btn btn-primary">Register Now</a>
+        <a href="/register" class="btn btn-primary buy-ticket">Buy Now</a>
       </form>
     </div>
   </div>
