hide tag cloud in /talks as it is currently broken

--- a/views/talks.html
+++ b/views/talks.html
@@ -5,10 +5,10 @@
       <div class="text-center">Submitted talks: <span class="talks_submitted">0</span></div>
       <div class="text-center">Accepted talks: <span class="talks_accepted">0</span></div>
     </div>
-    <div class="panel-body">
+    <!--div class="panel-body">
       <h3 class="panel-title">Tags</h3>
       <div id="tagcloud" class="cloud"></div>
-    </div>
+    </div-->
     <table class="table table-responsive table-hover">
       <thead>
         <tr>
