fixup cart fragment qty change
- move form from cart fragment into main cart view
- add div to surround table and button in fragment
- change JS to update surrounding div instead of table

--- a/views/cart.html
+++ b/views/cart.html
@@ -1,13 +1,15 @@
 <div class="container">
   <h1>Your shopping cart</h1>
-  <div class="paypal-error"><p>
+  <div class="alert alert-danger paypal-error" role="alert"><p>
   Payment with PayPal failed, please contact <a href="mailto:2015@perl.dance">
   2015@perl.dance</a> for assistance.
   </p></div>
   <div class="row">
     <div class="col-md-9">
-      <div class="table-responsive cart-container">
-      </div>
+      <form action="/paypal/setrequest" class="payment-form" method="POST">
+        <div class="table-responsive cart-container">
+        </div>
+      </form>
     </div>
   </div>
 </div>
