--- a/views/fragments/cart.html
+++ b/views/fragments/cart.html
@@ -1,4 +1,4 @@
-<form action="/paypal/setrequest" class="payment-form" method="POST">
+<div class="cart-fragment">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -45,4 +45,4 @@
 <div class="text-center">
   <button class="btn btn-primary" href="/profile/talk/create" type="submit">Pay with PayPal</button>
 </div>
-</form>
+</div>
