--- a/views/layouts/email.html
+++ b/views/layouts/email.html
@@ -17,6 +17,7 @@
       }
       td, th {
         padding:10px;
+        text-align:left;
       }
       tbody {
       }
@@ -31,6 +32,9 @@
       a {
         text-decoration:none;
         color:#0088cc;
+      }
+      .text-right {
+        text-align:right;
       }
     </style>
   </head>
