small change for responsive cart table

--- a/views/cart.html
+++ b/views/cart.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-md-9">
       <form action="/paypal/setrequest" class="payment-form" method="POST">
-        <div class="table-responsive cart-container">
+        <div class="cart-container">
         </div>
       </form>
     </div>
