--- a/views/layouts/main.xml
+++ b/views/layouts/main.xml
@@ -35,6 +35,19 @@
     </list>
   </list>
 
+  <list name="alerts-success" iterator="flash.success">
+    <param name="message"/>
+  </list>
+  <list name="alerts-info" iterator="flash.info">
+    <param name="message"/>
+  </list>
+  <list name="alerts-warning" iterator="flash.warning">
+    <param name="message"/>
+  </list>
+  <list name="alerts-error" iterator="flash.error">
+    <param name="message"/>
+  </list>
+
   <list name="extra-js" iterator="extra-js">
     <param name="src" target="src"/>
   </list>
