add some flash alerts
- paypal failure
- register success
- password reset success

also add op="hook" so we can add html to flash messages

--- a/views/layouts/main.xml
+++ b/views/layouts/main.xml
@@ -36,16 +36,16 @@
   </list>
 
   <list name="alerts-success" iterator="flash.success">
-    <param name="message"/>
+    <param name="message" op="hook"/>
   </list>
   <list name="alerts-info" iterator="flash.info">
-    <param name="message"/>
+    <param name="message" op="hook"/>
   </list>
   <list name="alerts-warning" iterator="flash.warning">
-    <param name="message"/>
+    <param name="message" op="hook"/>
   </list>
   <list name="alerts-error" iterator="flash.error">
-    <param name="message"/>
+    <param name="message" op="hook"/>
   </list>
 
   <list name="extra-js" iterator="extra-js">
