only show "view/edit talks" in profile if user has talks

--- a/views/profile.html
+++ b/views/profile.html
@@ -5,7 +5,7 @@
   <ul class="update-profile">
     <li class="profile"><a class="link" href="/">Update your information</a></li>
   </ul>
-  <p>View/edit your talks:</p>
+  <p class="has_talks">View/edit your talks:</p>
   <ul class="talks">
     <li class="talk"><a class="talk-link" href="/profile/talk/">Talk title</a> <span class="accepted">(Accepted)</span></li>
   </ul>
