basic styling improvements to email receipt.

--- a/views/email/receipt.html
+++ b/views/email/receipt.html
@@ -1,13 +1,17 @@
 <p>This email confirms that your order was received on <strong class="order_date">order date</strong> and that payment was accepted.</p>
-<h4>Order Details</h4>
+<h3>Order Details</h3>
 <table class="table">
   <tr>
-    <th>Order Number</th>
-    <td class="order_number">0000</td>
+    <th width="20%">Order Number</th>
+    <td>#<span class="order_number">0000</span></td>
   </tr>
   <tr>
-    <th>Email Address</th>
+    <th>Order Email</th>
     <td class="email">user@example.com</td>
+  </tr>
+  <tr>
+    <th>Payment Method</th>
+    <td class="order_payment_method">payment</td>
   </tr>
 </table>
 <table class="table table-hover">
