add initial work on talks admin.

--- a/views/admin.html
+++ b/views/admin.html
@@ -3,6 +3,7 @@
     <p>Admin</p>
     <ul>
       <li><a href="/admin/news">News</a></li>
+      <li><a href="/admin/talks">Talks</a></li>
     </ul>
   </div>
 </div>
