fixup tag cloud closes #30

--- a/views/talks.html
+++ b/views/talks.html
@@ -1,14 +1,15 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title"><a href="/talks">List of talks</a><span class="has_tag"> with tag: <span class="tag">tag</span></span></h3>
+      <h3 class="panel-title">List of talks<span class="has_tag"> with tag: <span class="tag">tag</span></span></h3>
       <div class="text-center">Submitted talks: <span class="talks_submitted">0</span></div>
       <div class="text-center">Accepted talks: <span class="talks_accepted">0</span></div>
     </div>
-    <!--div class="panel-body">
+    <div class="panel-body">
       <h3 class="panel-title">Tags</h3>
       <div id="tagcloud" class="cloud"></div>
-    </div-->
+      <a class="has_tag btn btn-default btn-sm spacing-top-small" href="/talks">Show All Talks</a>
+    </div>
     <table class="table table-responsive table-hover">
       <thead>
         <tr>
