--- a/views/admin/talks/create_update.html
+++ b/views/admin/talks/create_update.html
@@ -90,9 +90,11 @@
     </div>
 
     <div class="form-group">
-        <label for="inputStartTime" class="col-sm-2 control-label">Start Time</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputStartTime" name="start_time" placeholder="Start Time" required>
+        <label for="inputStartTime" class="col-sm-2 control-label" style="margin-right: 15px;">Start Time</label>
+        <div class="input-group date form_datetime col-md-4" data-date-format="dd MM yyyy - HH:ii p" data-link-field="start_time">
+            <input class="form-control" name="start_time" size="16" type="text" value="" required>
+            <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+            <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
         </div>
     </div>
 
