--- a/views/talk.xml
+++ b/views/talk.xml
@@ -1,4 +1,5 @@
 <specification>
+  <value name="title" class="page-title" field="talk.title"/>
   <value name="abstract" field="talk.abstract" op="hook" filter="markdown"/>
   <value name="photo-link" target="href" op="append" field="talk.author.uri"/>
   <value name="speaker-link" target="href" op="append" field="talk.author.uri"/>
