rehash speaker/user page
change layout, add pause id & monger groups + hide missing attributes

--- a/views/speaker.html
+++ b/views/speaker.html
@@ -10,15 +10,24 @@
     <div class="col-md-4">
       <div>
         <img class="photo img-responsive" src="/img/people/peter-mottram.jpg">
-        <h4 class="name">speaker name</h4>
-        <div><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></div>
       </div>                
     </div>
     <div class="col-md-8">
-      <h4>Biography</h4>
+      <h4 class="name"></h4>
       <div>
-        <p class="bio">Software developer and project leader with over 15 years experience. Applications include algebraic and optimisation algorithms, web services and virtual machines in Perl, Java and C within a Unix environment. Managing projects using both in-house and contract developers.</p>
+      <table class="table">
+        <tbody>
+          <tr class="has_nickname"><th scope="row">Nickname</th><td class="nickname"</td></tr>
+          <tr class="has_company"><th scope="row">Company</th><td class="company"</td></tr>
+          <tr class="has_city"><th scope="row">City</th><td class="city"</td></tr>
+          <tr class="has_country"><th scope="row">Country</th><td class="country"</td></tr>
+          <tr class="has_bio"><th scope="row">Biography</th><td class="bio"</td></tr>
+          <tr class="has_pause_id"><th scope="row">PAUSE id</th><td><a class="pause_id" href="https://metacpan.org/author/"></a></td></tr>
+          <tr class="has_monger_groups"><th scope="row">Monger groups</th><td><span class="monger_group"><a class="monger" href="http://www.pm.org/"></a><span class="sep">, </span></span></td></tr>
+        </tbody>
+      </table>
       </div>
+
       <h4 class="has_talks">Talks by <span class="name">Andrew Solomon</span></h4>
       <div class="panel panel-primary talks">
         <div class="panel-heading">
@@ -35,6 +44,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
 </div>
