--- a/views/cart.html
+++ b/views/cart.html
@@ -2,7 +2,7 @@
   <h1>Your shopping cart</h1>
   <div class="row">
     <div class="col-md-9">
-      <form action="/paypal/setrequest" class="payment-form" method="POST">
+      <form action="/paypal/maintenance" class="payment-form" method="POST">
         <div class="cart-container">
         </div>
       </form>
