--- a/views/register_reset.html
+++ b/views/register_reset.html
@@ -4,8 +4,8 @@
     <div class="text text-center">Some text about what is going on.</div>
     <form class="text-center form-inline form register-email" method="post" action="/register">
       <div class="form-group username_input">
-        <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
-        <div class="help-block username_error"></div>
+        <input class="form-control" type="email" name="email" size="30" required placeholder="Please enter your email address">
+        <div class="help-block email_error"></div>
         <input class="btn btn-primary submit" type="submit" value="Submit">
       </div>
     </form>
