--- a/views/sponsoring.html
+++ b/views/sponsoring.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="well">
   
   <h2>Why sponsor?</h2>
 
@@ -7,4 +8,5 @@
   <p>Apart from the sponsorship benefits, you will get in touch with community directly and meet the developers in person. Below we have outlined a few sponsorship options but we are open to additional custom proposals. This is a wonderful opportunity for your business to cost effectively target a very specific and technical market group. Contact us today and let one of our team members work out an effective plan perfect for any budget.</p>
 
   <p>Sponsor request by email: <a href="mailto:2015@perl.dance">2015@perl.dance</a></p>
+  </div>
 </div>
