wiki fix - modified by link href incorrect in /wiki

--- a/views/wiki.xml
+++ b/views/wiki.xml
@@ -10,4 +10,5 @@
   <value name="nickname" field="node.author.nickname" pattern="nickpat"/>
   <value name="edit" field="uri" target="href" op="append"/>
   <value name="history" field="uri" target="href" op="append"/>
+  <value name="user_link" field="node.author.id" target="href" op="append"/>
 </specification>
