Add user administration (GH #41).

--- a/views/admin.html
+++ b/views/admin.html
@@ -4,6 +4,7 @@
     <ul>
       <li><a href="/admin/news">News</a></li>
       <li><a href="/admin/talks">Talks</a></li>
+      <li><a href="/admin/users">Users</a></li>
     </ul>
   </div>
 </div>
