--- a/views/profile/create_update_talk.html
+++ b/views/profile/create_update_talk.html
@@ -71,9 +71,15 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Confirmed</label>
             <div class="col-sm-10">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox" name="confirmed">
+              <div class="is_confirmed">
+                <p class="form-control-static">Yes</p>
+              </div>
+              <div class="not_confirmed">
+                <label class="radio-inline">
+                  <input type="radio" name="confirmed" value="1">Yes
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" name="confirmed" value="0">No
                 </label>
               </div>
             </div>
