add confirmed column to admin/talks list

--- a/views/admin/talks.html
+++ b/views/admin/talks.html
@@ -6,6 +6,7 @@
         <tr>
           <th>Title</th>
           <th>Accepted</th>
+          <th>Confirmed</th>
           <th>Author</th>
           <th>Edit</th>
           <th>Delete</th>
@@ -15,6 +16,7 @@
         <tr class="talks-item">
           <td class="title">title</td>
           <td class="accepted">accepted</td>
+          <td class="confirmed">confirmed</td>
           <td class="author">author</td>
           <td><a class="edit" href="/admin/talks/edit/"><i class="fa fa-edit"></i></a></td>
           <td><a class="delete" href="/admin/talks/delete/"><i class="fa fa-trash"></i></a></td>
