--- a/views/admin/talks/create_update.html
+++ b/views/admin/talks/create_update.html
@@ -108,7 +108,7 @@
     <div class="form-group">
         <label for="inputComments" class="col-sm-2 control-label">Comments</label>
         <div class="col-sm-10">
-            <textarea rows="5" class="form-control" id="inputComments" name="comments" placeholder="Comments" required></textarea>
+            <textarea rows="5" class="form-control" id="inputComments" name="comments" placeholder="Comments"></textarea>
             <span class="help-block">Comments should be written in Markdown</span>
         </div>
     </div>
