--- a/views/users.html
+++ b/views/users.html
@@ -15,5 +15,5 @@
   </div>
 </div>
 <div id="user-list" class="hidden">
-  <div class="user"><span class="latitude"></span><span class="longitude"></span><span class="html"><span class="name"></span></span></div>
+  <div class="user"><span class="latitude"></span><span class="longitude"></span><span class="html"><a class="link" href="/users/"><span class="name"></span><span class="nickname"> (NickName)</span></a><br><img class="photo" src=""></span></div>
 </div>
