show user counts on user map

--- a/views/users.html
+++ b/views/users.html
@@ -2,6 +2,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title"></h3>
+      Showing <span class="count">X<span> of <span class="total_users">Y</span> total users.
     </div>
     <div id="usermap"></div>
     <div class="panel-footer">
