--- a/views/profile/edit.html
+++ b/views/profile/edit.html
@@ -53,6 +53,28 @@
           </div>
         </div>
 
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button id="geocode" class="btn btn-primary">Geocode City/Country</button>
+          </div>
+        </div>
+
+        <div class="form-group latitude">
+          <label for="inputLatitude" class="col-sm-2 control-label">Latitude</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputLatitude" name="latitude" placeholder="Latitude">
+            <div class="help-block latitude"></div>
+          </div>
+        </div>
+
+        <div class="form-group longitude_input">
+          <label for="inputLongitude" class="col-sm-2 control-label">Longitude</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputLongitude" name="longitude" placeholder="Longitude">
+            <div class="help-block longitude_error"></div>
+          </div>
+        </div>
+
         <div class="form-group monger_groups_input">
           <label for="inputMongerGroups" class="col-sm-2 control-label">Monger Groups</label>
           <div class="col-sm-10">
