fix type in profile edit form

--- a/views/profile/edit.html
+++ b/views/profile/edit.html
@@ -95,7 +95,7 @@
         <div class="form-group bio_input">
           <label for="inputBio" class="col-sm-2 control-label">Bio</label>
           <div class="col-sm-10">
-            <textarea rows="4" class="form-control" id="inputBio" name="bio" required placeholder="Talk abstract (max 200 words)"></textarea>
+            <textarea rows="4" class="form-control" id="inputBio" name="bio" required placeholder="Biography"></textarea>
             <div class="help-block bio_error"></div>
             <div class="help-block">In English. Please fill at least this one.</div>
           </div>
