--- a/views/admin.html
+++ b/views/admin.html
@@ -2,6 +2,7 @@
   <div class="jumbotron">
     <p>Admin</p>
     <ul>
+      <li><a href="/admin/navigation">Navigation</a></li>
       <li><a href="/admin/news">News</a></li>
       <li><a href="/admin/talks">Talks</a></li>
       <li><a href="/admin/users">Users</a></li>
