--- a/views/admin/navigation.html
+++ b/views/admin/navigation.html
@@ -1,35 +1,41 @@
+<link rel='stylesheet' href='/css/jquery.treetable.css' type='text/css'>
+<link rel='stylesheet' href='/css/jquery.treetable.theme.default.css' type='text/css'>
 <div class="container">
-  <a class="btn btn-primary" href="/admin/navigation/create">Create Nav</a>
+  <a class="btn btn-primary" href="/admin/navigation/create">Create Parent</a>
+  <button class="btn btn-default" id="expand">Expand All</button>
+  <button class="btn btn-default" id="collapse">Collapse All</button>
   <div class="table-responsive">
-    <table class="table table-hover">
+    <table class="treetable">
       <thead>
         <tr>
-          <th>ID</th>
-          <th>Parent</th>
-          <th>URI</th>
           <th>Type</th>
           <th>Scope</th>
           <th>Name</th>
+          <th>URI</th>
           <th>Description</th>
           <th>Alias</th>
           <th>Priority</th>
           <th>Active</th>
+          <th>Edit</th>
+          <th>Delete</th>
+          <th>Child</th>
         </tr>
       </thead>
       <tbody>
         <tr class="nav-item">
           <td class="navigation_id"></td>
           <td class="parent_id"></td>
-          <td class="uri"></td>
-          <td class="type"></td>
+          <td><span class="type folder"></span></td>
           <td class="scope"></td>
           <td class="name"></td>
+          <td class="uri"></td>
           <td class="description"></td>
           <td class="alias"></td>
           <td class="priority"></td>
           <td class="isactive"></td>
           <td><a class="edit" href="/admin/navigation/edit/"><i class="fa fa-edit"></i></a></td>
           <td><a class="delete" href="/admin/navigation/delete/"><i class="fa fa-trash"></i></a></td>
+          <td><a class="child" href="/admin/navigation/create/"><i class="fa fa-plus-square"></i></a></td>
         </tr>
       </tbody>
     </table>
