--- a/views/admin/navigation.html
+++ b/views/admin/navigation.html
@@ -1,7 +1,8 @@
 <link rel='stylesheet' href='/css/jquery.treetable.css' type='text/css'>
 <link rel='stylesheet' href='/css/jquery.treetable.theme.default.css' type='text/css'>
 <div class="container">
-  <a class="btn btn-primary" href="/admin/navigation/create">Create Parent</a>
+
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createModal">Create Parent</a>
   <button class="btn btn-default" id="expand">Expand All</button>
   <button class="btn btn-default" id="collapse">Collapse All</button>
   <div class="table-responsive">
@@ -35,9 +36,77 @@
           <td class="isactive"></td>
           <td><a class="edit" href="/admin/navigation/edit/"><i class="fa fa-edit"></i></a></td>
           <td><a class="delete" href="/admin/navigation/delete/"><i class="fa fa-trash"></i></a></td>
-          <td><a class="child" href="/admin/navigation/create/"><i class="fa fa-plus-square"></i></a></td>
+          <td><a class="child" href="#" data-toggle="modal" data-target="#createModal"><i class="fa fa-plus-square"></i></a></td>
         </tr>
       </tbody>
     </table>
+  </div>
+</div>
+
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="createLabel">Create Navigation Item</h4>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal">
+
+          <input type="hidden" name="parent_id">
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Type</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="type">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Scope</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="scope">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="name">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">URI</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="uri">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Description</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="description">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Alias</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="alias">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Priority</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="priority">
+            </div>
+          </div>
+
+          <button type="submit" class="btn btn-primary">Submit</a>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
