--- a/views/admin/navigation.html
+++ b/views/admin/navigation.html
@@ -12,9 +12,9 @@
     <table class="treetable">
       <thead>
         <tr>
+          <th>Name</th>
           <th>Type</th>
           <th>Scope</th>
-          <th>Name</th>
           <th>URI</th>
           <th>Description</th>
           <th>Alias</th>
@@ -29,9 +29,9 @@
         <tr class="nav-item">
           <td class="navigation_id"></td>
           <td class="parent_id"></td>
-          <td><span class="type folder"></span></td>
+          <td><span class="name folder"></span></td>
+          <td class="type"></td>
           <td class="scope"></td>
-          <td class="name"></td>
           <td class="uri"></td>
           <td class="description"></td>
           <td class="alias"></td>
