add admin menu as Navigation rows

--- a/views/admin.html
+++ b/views/admin.html
@@ -1,11 +1,9 @@
 <div class="container">
   <div class="jumbotron">
-    <p>Admin</p>
+    <p class="title">Admin</p>
     <ul>
-      <li><a href="/admin/navigation">Navigation</a></li>
-      <li><a href="/admin/news">News</a></li>
-      <li><a href="/admin/talks">Talks</a></li>
-      <li><a href="/admin/users">Users</a></li>
+      <li class="nav"><a class="link" href="/">Navigation</a></li>
+      <li class="nav"><a class="link" href="/">News</a></li>
     </ul>
   </div>
 </div>
