--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -35,23 +35,35 @@
           <a class="navbar-brand" href="/"><img src="/img/perl-dancer-2015-logo.png"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="menu-main">
-              <a class="link" href="/">Home</a>
-              <ul class="dropdown-menu">
-                <li class="menu-main-child"><a class="link" href="/">Submenu</a></li>
-              </ul>
-            </li>
+          <ul class="nav navbar-nav navbar-right auth-login">
             <li class="menu-login">
               <a class="link" href="/">Login</a>
               <ul class="dropdown-menu">
                 <li class="menu-login-child"><a class="link" href="/">Submenu</a></li>
               </ul>
             </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right auth-logout">
             <li class="menu-logout">
               <a class="link" href="/">Logout</a>
               <ul class="dropdown-menu">
                 <li class="menu-logout-child"><a class="link" href="/">Submenu</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right show-nav-admin">
+            <li class="menu-admin">
+              <a class="link" href="/">Menu</a>
+              <ul class="dropdown-menu">
+                <li class="menu-admin-child"><a class="link" href="/">Submenu</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="menu-main">
+              <a class="link" href="/">Home</a>
+              <ul class="dropdown-menu">
+                <li class="menu-main-child"><a class="link" href="/">Submenu</a></li>
               </ul>
             </li>
           </ul>
