--- a/views/layouts/main.xml
+++ b/views/layouts/main.xml
@@ -1,6 +1,7 @@
 <specification>
   <container name="login" value="!logged_in_user" class="auth-login"/>
   <container name="logout" value="logged_in_user" class="auth-logout"/>
+  <container name="show-nav-admin" value="is_admin"/>
   <container name="title-wrapper" value="title_wrapper"/>
   <value name="title" class="page-title"/>
   <value name="description" class="page-caption"/>
@@ -30,6 +31,15 @@
     <param name="uri" class="link" target="href" op="append"/>
     <param name="class" class="link" target="class"/>
     <list name="menu-main-child" iterator="children">
+      <param name="name" class="link"/>
+      <param name="uri" class="link" target="href" op="append"/>
+    </list>
+  </list>
+  <list name="menu-admin" iterator="nav-menu-admin">
+    <param name="name" class="link"/>
+    <param name="uri" class="link" target="href" op="append"/>
+    <param name="class" class="link" target="class"/>
+    <list name="menu-admin-child" iterator="children">
       <param name="name" class="link"/>
       <param name="uri" class="link" target="href" op="append"/>
     </list>
